# poc_vcg_rs

./: .gitignore  .gitmodules  Cargo.toml  コマンドラインメモ.txt
vcg/: Cargo.toml  build.rs
vcg/c_src/: c_test.c  display_mesh.cpp  meshlab.cpp  meshlab.h
vcg/c_src/cl_test/: meshlab.cc  meshlab.h
vcg/c_src/cpp_test/: meshlab.cpp  meshlab.h  test.cpp
vcg/c_src/cxx_test/: blobstore.cc  blobstore.h  meshlab.cc  meshlab.h
vcg/src/: c_test.rs  cpp_test.rs  cxx_meshlab.rs  cxx_tutorial.rs  lib.rs  meshlab.rs
