[package]
name = "poc_vcglib"
version = "0.1.0"
edition = "2021"
default-run = "logger_test"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  "vcg",
  ]
[dependencies]
vcg = { path = "./vcg" }
mylogger = {git = "https://github.com/ryo2357/rs-mylogger"}